style.css
body {
    font: 100% "Avenir", SansSerif;
    background-color: #3C5FA6;
    margin: 20px;
    padding: 20px;
    background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
    background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
    background-attachment: fixed;
    color: whitesmoke;
    font-size: 1.2rem;

}
h1{
    font-size: 4rem;
}
h2{
    font-size: 2.5rem;
}
h3{
    font-size: 1.3rem;
}

h1,h2{
    font-weight: bold;
}

@media only screen and (max-width: 300px) {

}

@media only screen and (min-width: 300px) and (max-width: 768px) {
    div.second{
        width: 100%;
        overflow: auto;
    }
    div.small {
        display: inline;
        float: left;
        width: 45%;
        margin: 15px;
        background-color: #F2F2F2;
        color: #444444;
        padding: 15px;
        word-wrap: break-word;
    }
    div.main {
        float: left;
        width: 100%;
        margin-top: 20px;
        margin-bottom: 20px;
        background-color: #F2F2F2;
        color: #444444;
        padding: 15px;

    }
    .main div {
        page-break-inside: avoid;
        font-size: 15px;
        line-height: 1.6;
        margin-bottom: 1.6em;
        margin-top: 1.6em;
        max-width: 100%;
        overflow: auto;
        padding: 1em 1.5em;
        display: block;
        word-wrap: break-word
    }
    .main div.left {
        float: left;
        width: 45%;
        display: inline;
    }
    .main div.right {
        float: right;
        width: 45%;
        display: inline;
    }

}

@media only screen and (min-width: 768px) {
    div.second{
        width: 100%;
    }
    div.medium {
        width: 24%;
        background-color: #F2F2F2;
        color: #444444;
        padding: 15px;
    }
    div.main {
        float: left;
        width: 100%;
        margin-top: 20px;
        margin-bottom: 20px;
        background-color: #F2F2F2;
        color: #444444;
        padding: 15px;

    }

    .main div {
        page-break-inside: avoid;
        font-size: 15px;
        line-height: 1.6;
        margin-bottom: 1.6em;
        margin-top: 1.6em;
        max-width: 100%;
        overflow: auto;
        padding: 1em 1.5em;
        display: block;
        word-wrap: break-word
    }


}

